@@ -7,6 +7,8 @@ Add new items to top.
   Src: MainFrm.cpp
  Remove unused function, fix inproper pointer usage
   Src: FileFilterHelper.cpp
+ Fix casting a pointer type to DWORD (not 64-bit compatible)
+  Src: DirView.cpp DirView.h
 
 2006-10-19 Kimmo
  PATCH: [ 1578419 ] Fix creating WinMerge folder to MyFolders always
